# bitrix-to-trysasha

./: .gitignore  pyproject.toml
app/: main.py
app/api/routes/: root.py  webhooks.py
app/core/: config.py  providers.py
app/core/settings/: app.py  production.py
app/models/: sasha.py
app/services/: bitrix.py  sasha.py
