[project]
name = "sasha-to-bitrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiogram>=3.23.0",
    "apscheduler>=3.11.2",
    "dishka>=1.7.2",
    "fast-bitrix24>=1.8.11",
    "fastapi[standard]>=0.126.0",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "structlog>=25.5.0",
    "taskiq>=0.12.1",
    "uvicorn>=0.38.0",
]
